--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "request-promise": "^4.2.4"
   },
   "engines": {
-      "node": "10.13.0"
+      "node": "10.13.0",
+      "npm": "6.4.1"
   }
 }
